fixed left alignment

--- a/templates/static/css/screen.css
+++ b/templates/static/css/screen.css
@@ -332,7 +332,7 @@ tr.bottom {
 	border-style: solid;
 	border-width: 0 1px 1px;
 	margin-left: 21em;
-	padding: 2px 1em;
+	padding: 2px 40px;
 	}
 #footer a {
 	text-decoration: none; 
